--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"private": false,
 	"version": "0.0.0",
 	"type": "module",
+	"license": "MIT",
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc -b && vite build",
@@ -27,6 +28,7 @@
 		"eslint-plugin-react-hooks": "^5.0.0",
 		"eslint-plugin-react-refresh": "^0.4.18",
 		"globals": "^15.14.0",
+		"supabase": "^2.12.1",
 		"typescript": "~5.7.2",
 		"typescript-eslint": "^8.22.0",
 		"vite": "^6.1.0"
