--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"@emotion/styled": "^11.14.0",
 		"@mui/icons-material": "^6.4.3",
 		"@mui/material": "^6.4.3",
-		"@supabase/supabase-js": "^2.48.1",
+		"axios": "^1.7.9",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0"
 	},
