Add yarn ci script

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
 	"type": "module",
 	"license": "MIT",
 	"scripts": {
+		"preci": "rm -rf node_modules",
+		"ci": "yarn install --frozen-lockfile",
 		"dev": "vite",
 		"build": "tsc -b && vite build",
 		"lint": "eslint .",
