--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"license": "MIT",
 	"homepage": "https://glesage.github.io/wedding-registry/",
 	"scripts": {
-		"deploy": "gh-pages -d dist",
+		"preci": "rm -rf node_modules",
+		"ci": "yarn install --frozen-lockfile",
 		"dev": "vite",
 		"build": "tsc -b && vite build",
 		"lint": "eslint .",
@@ -29,7 +30,6 @@
 		"eslint": "^9.19.0",
 		"eslint-plugin-react-hooks": "^5.0.0",
 		"eslint-plugin-react-refresh": "^0.4.18",
-		"gh-pages": "^6.3.0",
 		"globals": "^15.15.0",
 		"supabase": "^2.12.1",
 		"typescript": "~5.7.2",
